Fix nested list bug

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,6 +1,6 @@
 <form class="contact-form" action="https://getsimpleform.com/messages?form_api_token={{ site.contact_PK }}" method="post">
     <input type='hidden' name='redirect_to' value='{{ site.url }}{{ site.baseurl }}/pages/thankyou.html' />
-    <input required="required" id="logo-name" placeholder="* Name" type='text' name='name' />
+    <input required="required" id="name" placeholder="* Name" type='text' name='name' />
     <input required="required" id="email" placeholder="* Email" type='email' name='email' />
     <textarea name="message" placeholder="Enter your message here..." id="message" cols="30" rows="7"></textarea>
     <input type='submit' value='Send' />
