--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,7 +1,7 @@
 <a id="logo" href="{{ site.baseurl }}/index.html">
-    <img src="/resources/images/logo.svg" alt="logo">
+    <img src="/resources/images/logo.png" alt="logo">
     <div>
-        <span id="logo-name">DENNIS GRINCH</span>
-        <span id="tag-line">Software Engineer</span>
+        <span id="logo-name">{{ site.logo["title"] }}</span>
+        <span id="tag-line">{{ site.logo["subtitle"] }}</span>
     </div>
 </a>
