--- a/_sass/_helpers.scss
+++ b/_sass/_helpers.scss
@@ -18,7 +18,7 @@
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, 0.25)),
   -webkit-linear-gradient($color-orange, $color);
   @if $progress == true {
-    background-size: 35px $l-h-1-5, 100% 100%, 100% 100%;
+    background-size: 35px $l-h-M, 100% 100%, 100% 100%;
   }
 }
 
@@ -26,7 +26,7 @@
   background-image: -moz-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, 0.25)),
   -moz-linear-gradient($color-orange, $color);
   @if $progress == true {
-    background-size: 35px $l-h-1-5, 100% 100%, 100% 100%;
+    background-size: 35px $l-h-M, 100% 100%, 100% 100%;
   }
 }
 
