--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,5 +1,5 @@
 <a id="logo" href="{{ site.baseurl }}/index.html">
-    <img src="/resources/images/logo.png" alt="logo">
+    <img src="{{ site.baseurl }}/resources/images/logo.png" alt="logo">
     <div>
         <span id="logo-name">{{ site.logo["title"] }}</span>
         <span id="tag-line">{{ site.logo["subtitle"] }}</span>
