--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-<body>
+<body style="background: url('{{ site.baseurl }}/resources/images/main_front.jpg') no-repeat fixed">
 <div id="wrapper">
     <header>
     {% include header.html %}
