--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -70,7 +70,9 @@ article,
 img {
   width: 100%;
 }
-
+.lineno {
+  width: 35px;
+}
 //----------------------------WIDTH=MISC
 .contact-form input:not([type="submit"]) {
   width: $l-h-baseline * 12;
