--- a/_sass/_box_model.scss
+++ b/_sass/_box_model.scss
@@ -157,6 +157,10 @@ h3 {
   padding: $l-h-baseline * 0.8 0;
 }
 
+.lineno {
+  padding: $l-h-baseline * 0.38;
+}
+
 .contact-form input,
 .contact-form textarea {
   padding: 0.52rem;
