Change mediq query

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -37,8 +37,7 @@
 }
 //---------------------------HIDE
 .sep {
-  visibility: hidden;
-  height: 0.1rem;
+  //visibility: hidden;
 }
 
 //---------------------------FLEX
