--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,5 +5,5 @@ layout: default
     <header>
         {% include title.html %}
     </header>
-    {{ page.content }}
+    {{ content }}
 </article>
