--- a/_sass/_pseudo.scss
+++ b/_sass/_pseudo.scss
@@ -15,16 +15,20 @@
   max-width: $media-query-max;
 }
 
+article > ul li:before,
+article > ol li::before {
+  color: $color-orange;
+}
+
 article > ul li:before{
   content: "\00BB \0020";
-  color: $color-orange;
   margin-right: $l-h-baseline / 3;
 }
 
-article >  ol li:before {
-  content: "";
-  width: 0.2rem;
-  display: inline-block;
+article > ol li:before {
+  content: counter(item) ".\0020";
+  counter-increment: item;
+  margin-right: $l-h-baseline / 6;
 }
 
 .fancy-nav:before {
