Fixed vertical rhytm

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,11 +8,11 @@
         {% endif %}
     </p>
     <footer>
-        &#45; <cite>
+        <cite>
         {% if page.quote %}
-        {{ page.quote["author"] }}
+        - {{ page.quote["author"] }}
         {% else %}
-        {{ site.quote["author"] }}
+        - {{ site.quote["author"] }}
         {% endif %}
     </cite>
     </footer>
