--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,8 +5,6 @@
         <li><a class="fancy-nav" href="{{ site.baseurl }}/categories/{{ link | first | downcase }}">{{ link | first }}</a></li>
         {% endfor %}
         <li><a class="fancy-nav" href="{{ site.baseurl }}/pages/about.html">about</a></li>
+        <li><a class="fancy-nav" href="{{ site.baseurl }}/pages/thankyou.html">thank you</a></li>
     </ul>
 </nav>
-
-
-
