--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,11 @@
     {% include header.html %}
     </header>
     <main id="start">
+<div class="contents">
+<div class="articles">
         {{ content }}
+</div>
+</div>
     </main>
     {% include paginator.html %}
     <footer>
