--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -1,6 +1,5 @@
 .highlight {
   background-color: #2B2B2B;
-  margin-bottom: 15px;
   color: #A9B7C6; }
 .highlight pre {
   background-color: #2B2B2B; }
@@ -8,7 +7,7 @@
   background-color: #2B2B2B; }
 .highlight .lineno {
   color: #888888; }
-.highlighter-rouge .highlight {
+.highlight {
   background: #2B2B2B; }
 .highlight .c {
   color: #808080; }
