--- a/main.scss
+++ b/main.scss
@@ -2,15 +2,15 @@
 ---
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
-@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:700);
 @import "reset";
-@import "helpers";
 @import "variables";
 @import "colour";
+@import "helpers";
 @import "typography";
 @import "default";
-@import "box_model";
-@import "skills";
 @import "pseudo";
+@import "box_model";
 @import "media";
 @import "darcula";
+@import "playground";
